crates/saldo-ws/tests/api/snapshots/api__lids__test_json_missing_returns_404-qt..1.snap
---
source: crates/saldo-ws/tests/api/lids.rs
expression: data
---
{
  "data": {
    "message": "There is no lexeme 'qt..1'"
  },
  "status_code": 404
}
