crates/saldo-ws/tests/api/snapshots/api__lids__test_json_missing_returns_404-qt..vb.1.snap
---
source: crates/saldo-ws/tests/api/lids.rs
expression: data
---
{
  "data": {
    "message": "There is no lemma 'qt..vb.1'"
  },
  "status_code": 404
}
