crates/saldo-ws/tests/api/snapshots/api__lids__test_json_valid_input_returns_200-dväljas..vb.1.snap
---
source: crates/saldo-ws/tests/api/lids.rs
expression: data
---
{
  "gf": "dväljas",
  "l": [
    "dväljas..1"
  ],
  "p": "vb_vs_dväljas"
}
